[tool.poetry]
name = "ipy-blender"
version = "0.0.4"
readme = "README.md"
description = "Messing around with ipykernel, blender & sat imagery"
authors = ["Maxime Lenormand, <maxime@overstory.com>"]

[tool.poetry.dependencies]
python = "~=3.10.0"
bpy = "^3.6.0"
anywidget = "~0.6"
watchfiles = "~0.20"
ipykernel = "~6.25"


[tool.hatch.build]
artifacts = ["src/ipyblender_experimental/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyblender_experimental/static/widget.js"]
skip-if-exists = ["src/ipyblender_experimental/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"